--- a/Notebooks/sentiment_model_train.ipynb
+++ b/Notebooks/sentiment_model_train.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.utils import resample\n",
     "import datasets\n",
-    "import re"
+    "import re\n",
+    "import pickle"
    ]
   },
   {
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +976,16 @@
     "        else:\n",
     "            proba = torch.nn.functional.softmax(logits,dim=1).to('cpu').detach().numpy()\n",
     "\n",
-    "        return proba\n"
+    "        return proba\n",
+    "\n",
+    "    def save_model(self, file_path):\n",
+    "        with open(file_path, 'wb') as file:\n",
+    "            pickle.dump(self, file)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def load_model(file_path):\n",
+    "        with open(file_path, 'rb') as file:\n",
+    "            return pickle.load(file)"
    ]
   },
   {
